--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'net.dv8tion:JDA:3.5.0_329'
+    compile 'io.magicthegathering:javasdk:0.0.12'
 }
